add react lecture ci

--- a/react/lecture/package.json
+++ b/react/lecture/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-seminar-2024-class-material",
+  "name": "lecture",
   "private": true,
   "version": "0.0.0",
   "type": "module",
