--- a/react/lecture/package.json
+++ b/react/lecture/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
     "react-router-dom": "6.26.0"
   },
   "devDependencies": {
