--- a/react/lecture/package.json
+++ b/react/lecture/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "6.26.0"
   },
   "devDependencies": {
+    "@types/node": "22.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react-swc": "3.7.0",
