add lecture0 일부

--- a/.github/workflows/frontend-lecture-ci.yml
+++ b/.github/workflows/frontend-lecture-ci.yml
@@ -26,3 +26,5 @@ jobs:
         run: yarn format
       - name: Check Types
         run: yarn check-types
+      - name: Knip
+        run: yarn knip
