--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "embla-carousel-react": "8.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
@@ -30,8 +33,10 @@
     "@woohm402/eslint-config-react": "0.6.0",
     "autoprefixer": "10.4.20",
     "eslint": "9.9.0",
+    "knip": "5.27.3",
     "postcss": "8.4.41",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "shadcn-ui": "0.8.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
