--- a/frontend/lecture/tsconfig.json
+++ b/frontend/lecture/tsconfig.json
@@ -24,5 +24,5 @@
     "baseUrl": ".",
     "paths": { "@/*": ["./src/*"] }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "tailwind.config.ts", "knip.config.ts"]
 }
