--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -12,10 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "embla-carousel-react": "8.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
-    "react-router-dom": "6.26.0"
+    "react-router-dom": "6.26.0",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "22.3.0",
@@ -23,8 +31,14 @@
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react-swc": "3.7.0",
     "@woohm402/eslint-config-react": "0.6.0",
+    "autoprefixer": "10.4.20",
     "eslint": "9.9.0",
+    "knip": "5.27.3",
+    "postcss": "8.4.41",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "shadcn-ui": "0.8.0",
+    "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "vite": "5.4.0"
   },
