--- a/frontend/lecture/tsconfig.json
+++ b/frontend/lecture/tsconfig.json
@@ -22,7 +22,7 @@
     "noUncheckedIndexedAccess": true,
 
     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] }
+    "paths": { "@/*": ["./src/*"] }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "tailwind.config.ts", "knip.config.ts"]
 }
