--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
     "react-router-dom": "6.26.0",
+    "react-syntax-highlighter": "15.5.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7"
   },
@@ -29,6 +30,7 @@
     "@types/node": "22.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react-syntax-highlighter": "^15",
     "@vitejs/plugin-react-swc": "3.7.0",
     "@woohm402/eslint-config-react": "0.6.0",
     "autoprefixer": "10.4.20",
