--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "embla-carousel-react": "8.2.0",
