--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -9,7 +9,8 @@
     "check-types": "tsc",
     "lint": "eslint .",
     "format": "prettier . --check",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-all": "yarn check-types && yarn lint && yarn format"
   },
   "dependencies": {
     "@radix-ui/react-icons": "1.3.0",
