--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -9,8 +9,7 @@
     "check-types": "tsc",
     "lint": "eslint .",
     "format": "prettier . --check",
-    "preview": "vite preview",
-    "check-all": "yarn check-types && yarn lint && yarn format"
+    "check-all": "yarn check-types && yarn lint && yarn format && yarn knip"
   },
   "dependencies": {
     "@radix-ui/react-icons": "1.3.0",
@@ -19,7 +18,6 @@
     "@radix-ui/react-tabs": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "embla-carousel-react": "8.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
