--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -21,28 +21,28 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
-    "react-router-dom": "6.26.0",
+    "react-router-dom": "6.26.1",
     "react-syntax-highlighter": "15.5.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "22.3.0",
-    "@types/react": "18.3.3",
+    "@types/node": "22.5.2",
+    "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "@types/react-syntax-highlighter": "^15",
+    "@types/react-syntax-highlighter": "15.5.13",
     "@vitejs/plugin-react-swc": "3.7.0",
     "@woohm402/eslint-config-react": "0.6.0",
     "autoprefixer": "10.4.20",
-    "eslint": "9.9.0",
-    "knip": "5.27.3",
-    "postcss": "8.4.41",
+    "eslint": "9.9.1",
+    "knip": "5.29.1",
+    "postcss": "8.4.44",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "shadcn-ui": "0.8.0",
+    "shadcn-ui": "0.9.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
-    "vite": "5.4.0"
+    "vite": "5.4.3"
   },
   "packageManager": "yarn@4.4.0"
 }
