--- a/frontend/lecture/package.json
+++ b/frontend/lecture/package.json
@@ -12,10 +12,12 @@
     "check-all": "yarn check-types && yarn lint && yarn format && yarn knip"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-tabs": "1.1.0",
+    "@radix-ui/react-toast": "1.2.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "react": "18.3.1",
@@ -27,7 +29,7 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "22.5.2",
+    "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@types/react-syntax-highlighter": "15.5.13",
@@ -35,11 +37,10 @@
     "@woohm402/eslint-config-react": "0.6.0",
     "autoprefixer": "10.4.20",
     "eslint": "9.9.1",
-    "knip": "5.29.1",
-    "postcss": "8.4.44",
+    "knip": "5.29.2",
+    "postcss": "8.4.45",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "shadcn-ui": "0.9.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "vite": "5.4.3"
